fix: 修复数据管理入口缺失，按钮可正常打开模态框

--- a/index.html
+++ b/index.html
@@ -1228,6 +1228,9 @@
                     <button id="managePresetCategoriesBtn" class="btn btn-info">
                         <i class="fas fa-th-large"></i> 分类管理
                     </button>
+                    <button id="showDataManagementBtn" class="btn btn-secondary">
+                        <i class="fas fa-database"></i> 数据管理
+                    </button>
                 </div>
             </div>
             
@@ -2287,7 +2290,7 @@
             
             try {
                 if (typeof showNotification === 'function') {
-                    showNotification('欢迎使用 Mayi Prompt UI 3.4.9', 'success');
+                    showNotification('欢迎使用 Mayi Prompt UI 3.4.10', 'success');
                 }
             } catch (error) {
                 console.error('显示通知时出错:', error);
@@ -5860,7 +5863,7 @@
                     showNegative: settings.showNegative,
                     favorites: settings.favorites
                 },
-                version: '3.4.9',
+                version: '3.4.10',
                 作者: 'Mayi',
                 Github: 'https://clay2001.github.io/Prompt-UI/',
                 exportDate: new Date().toISOString()
@@ -6110,7 +6113,7 @@
         <div class="flex flex-wrap justify-center items-center gap-2">
             <span>© 2025 Mayi Prompt UI</span>
             <span class="mx-2">•</span>
-            <span>版本 3.4.9</span>
+            <span>版本 3.4.10</span>
             <span class="mx-2">•</span>
             <a href="https://github.com/clay2001/Prompt-UI" target="_blank" rel="noopener" class="text-primary hover:underline">GitHub</a>
         </div>
